# ci_python

./: .custom_runner_gitlab-ci.yml  .flake8  .gitignore  .gitlab-ci.yml  .pgitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  requirements_dev.txt  setup.cfg
.github/workflows/: ci.yml  test.yml
demo_app/application/: cli.py
src/: addition_method.py  database.py
src/application/: cli.py
tests/unit/: test_addition_method.py
