[metadata]
name = demo_app
version = attr: demo_app.__version__
author = LEOB & TOUL
author_email =
home_page = https://gitlab.com/octo-technology/les-bg-de-la-data/s-s-all/demos/ci_python/
license =
description = un BBL sur les CI en python.
platform = any
classifiers =
    Programming Language :: Python :: 3
    Intended Audience :: Developers, DataScientists, MLEngineers
    Operating System :: OS Independent

[options]
zip_safe = false
packages=find:
exclude=tests
install_requires =
    sqlalchemy==1.4.34
include_package_data = True
python_requires = >=3.10
[options.extras_require]
dev =
    flake8==4.0.1
    flake8-print==4.0.0
    bandit==1.7.4
    vulture==2.3
    safety==1.10.3
    pytest==7.1.1
    pytest-cov==3.0.0
    mypy==0.942
    build==0.7.0
    semgrep==0.86.5


[options.entry_points]
console_scripts =
    cli-addition = demo_app.application.cli:main

[options.packages.find]
exclude =
    tests
